<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/ic_discover"
        android:title="@string/title_discover"
        android:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_popular"
        android:icon="@drawable/ic_popular"
        android:title="@string/title_popular"
        android:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_new"
        android:icon="@drawable/ic_new"
        android:title="@string/title_new"
        android:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search"
        android:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile"
        android:showAsAction="always|withText" />

</menu>
